# pico-pi-nes-game-console

./: CMakeLists.txt  LICENSE  README.md
RPi_pico_100ask_infones/: CMakeLists.txt  RPi_pico_100ask_infones.c
RPi_pico_100ask_infones/infones/: InfoNES.c  InfoNES_System.c  rom.c
RPi_pico_100ask_infones/lib/FatFs_SPI_lib/: CMakeLists.txt
RPi_pico_100ask_infones/lib/FatFs_SPI_lib/sd_driver/: hw_config.c
RPi_pico_100ask_infones/lib/FatFs_SPI_lib/src/: ff_stdio.c
